# stm32_demo

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/inc/: stm32f7xx_hal_conf.h
inc/: stm32f7xx.h  stm32f7xx_hal_def.h
lib/: CMakeLists.txt
